--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>jQuery.QEditor Example</title>
   <link href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.min.css" rel="stylesheet">
   <link href="http://netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="https://raw.github.com/huacnlee/jquery.qeditor/master/dist/css/jquery.qeditor.css" type="text/css">
+  <link rel="stylesheet" href="css/jquery.qeditor.css" type="text/css">
   <style type="text/css" media="screen">
   .textarea {
     background-color: #ffffff;
