--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   }
   </style>
   <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-  <script src="https://raw.github.com/huacnlee/jquery.qeditor/master/dist/js/jquery.qeditor.js" type="text/javascript"></script>
+  <script src="js/jquery.qeditor.js" type="text/javascript"></script>
 </head>
 <body>
   <div class="container">
