--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     
     // Custom a toolbar icon
     var toolbar = $("#post_body").parent().find(".qeditor_toolbar");
-    var link = $("<a href='#'><span class='icon-smile'></span></a>");
+    var link = $("<a href='#'><span class='icon-smile' title='smile'></span></a>");
     link.click(function(){
       alert("Put you custom toolbar event in here.");
       return false;
@@ -78,8 +78,8 @@
     // Custom Insert Image icon event
     function changeInsertImageIconWithCustomEvent() {
       var link = toolbar.find("a.qe-image");
-      link.attr("onclick","");
-      link.click(function(){
+      link.attr("data-action","");
+      link.click(function(e){
         alert("New insert image event");
         return false;
       });
